# gap

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  PHASE1_OPTIMIZATION_RESULTS.md  README.md  build.sh  pyproject.toml  setup.py  test_network.json
bindings/: CMakeLists.txt  README.md  __init__.py  core_bindings.cpp  cuda_bindings.cpp  gap_bindings.cpp  io_bindings.cpp  solver_bindings.cpp
cmake/: FindCUDAHelpers.cmake  config.cmake  config.h.in
data/: README.md
data/pgm/: input.json  network_1.json  network_2.json  network_zip_const_current.json  network_zip_const_i.json  network_zip_const_impedance.json  network_zip_const_pq.json  network_zip_const_y.json
data/sample/: simple_3bus.json
docs/: BUILD_GUIDE.md  bus_id_auto_detection.md
include/gap/admittance/: admittance_interface.h
include/gap/core/: backend_factory.h  types.h
include/gap/io/: io_interface.h
include/gap/logging/: log_config.h  logger.h
include/gap/solver/: gpu_iterative_current_kernels.h  gpu_newton_raphson_kernels.h  gpu_powerflow_kernels.h  lu_solver_interface.h  powerflow_interface.h
scripts/: build.sh  build_test.sh  build_with_cuda.sh  build_with_venv.sh  check_gap_module.py  clean.sh  format-code.sh  format-python.sh  format.sh
src/: CMakeLists.txt
src/admittance/cpu/: cpu_admittance_matrix.cpp
src/admittance/gpu/: gpu_admittance_matrix.cu
src/core/: backend_factory.cpp  gpu_data_manager.cu  gpu_data_structures.cu
src/io/: json_io.cpp
src/logging/: logger.cpp
src/main/: main.cpp
src/solver/lu/cpu/: cpu_lu_solver.cpp
src/solver/lu/gpu/: gpu_cudss_solver.cu  gpu_lu_solver.cu
src/solver/powerflow/cpu/: cpu_iterative_current.cpp  cpu_newton_raphson.cpp
src/solver/powerflow/gpu/: gpu_iterative_current.cu  gpu_iterative_current_kernels.cu  gpu_newton_raphson.cu  gpu_newton_raphson_kernels.cu  gpu_powerflow_kernels.cu
test_workspace/comparison_results/: test_case_comparison.json
test_workspace/reference_solutions/: test_case_reference.json
test_workspace/test_networks/test_case/: input.json  metadata.json
test_workspace_flexible/comparison_results/: flexible_test_comparison.json
test_workspace_flexible/reference_solutions/: flexible_test_reference.json
test_workspace_flexible/test_networks/flexible_test/: input.json  metadata.json
tests/: CMakeLists.txt  debug_gpu_mismatch.cpp  test_pgm_io.cpp
tests/debug/: compare_with_pgm.cpp  debug_jacobian.cpp  debug_state_compare.cpp  save_jacobian.cpp
tests/pgm_validation/: PYTEST_README.md  README.md  VALIDATION_SUMMARY.md  example_validation.py  generate_test_data.py  pytest.ini  run_pytest.sh  run_validation.py  test_backend_comparison.py  test_backend_simple.py  test_batch_api.py  test_batch_calculation.py  test_id_auto_detection.py  test_pgm_validation.py  test_simple_fix.py  validate.py  validation_demo.py
tests/pgm_validation/grid_generators/: pgm_generator.py
tests/pgm_validation/json_io/: gap_json_parser.py  gap_json_serializer.py
tests/pgm_validation/reference_solutions/: pgm_reference.py
tests/pgm_validation/test_data/radial_100feeder_100nodepf/: metadata.json
tests/pgm_validation/test_data/radial_100feeder_500nodepf/: metadata.json
tests/pgm_validation/test_data/radial_100feeder_50nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_10feeder_10nodepf/: batch_output.json  input.json  metadata.json  output.json  update.json
tests/pgm_validation/test_data/radial_1feeder_2nodepf/: batch_output.json  input.json  metadata.json  output.json  update.json
tests/pgm_validation/test_data/radial_1feeder_4nodepf/: batch_output.json  input.json  metadata.json  output.json  update.json
tests/pgm_validation/test_data/radial_1feeder_8nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_200feeder_100nodepf/: metadata.json
tests/pgm_validation/test_data/radial_200feeder_500nodepf/: metadata.json
tests/pgm_validation/test_data/radial_25feeder_50nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_2feeder_2nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_2feeder_4nodepf/: batch_output.json  input.json  metadata.json  output.json  update.json
tests/pgm_validation/test_data/radial_2feeder_8nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_3feeder/: input.json  metadata.json
tests/pgm_validation/test_data/radial_3feeder_2nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_3feeder_4nodepf/: batch_output.json  input.json  metadata.json  output.json  update.json
tests/pgm_validation/test_data/radial_3feeder_8nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/radial_50feeder_100nodepf/: input.json  metadata.json  output.json
tests/pgm_validation/test_data/simple_2bus/: input.json  metadata.json
tests/unit/: gpu_test_main.cpp  test_admittance.cpp  test_batch_powerflow.cpp  test_framework.h  test_gpu_admittance.cpp  test_gpu_iterative_current.cpp  test_gpu_jacobian.cpp  test_gpu_lu_solver.cpp  test_gpu_mismatch.cpp  test_gpu_powerflow.cpp  test_gpu_state_capture.cpp  test_io.cpp  test_iterative_current.cpp  test_kernel_runner.cu  test_lu_solver.cpp  test_main.cpp  test_main_cli.cpp  test_newton_raphson_functions.cpp  test_pgm_io.cpp  test_powerflow.cpp  unit_test_main.cpp
tests/validation/: debug_simple_2bus.cpp  ieee_test_cases.cpp  lu_solver_validation.cpp  pgm_gpu_validation.cpp  solver_comparison.cpp  test_500_detailed.cpp  validation_main.cpp
